--- a/TextEditor/mainwindow.ui
+++ b/TextEditor/mainwindow.ui
@@ -84,8 +84,10 @@
     <property name="title">
      <string>Edit</string>
     </property>
+    <addaction name="actionCut"/>
     <addaction name="actionCopy"/>
-    <addaction name="actionPaste"/>
+    <addaction name="actionPaste_2"/>
+    <addaction name="separator"/>
     <addaction name="actionUndo"/>
     <addaction name="actionRedo"/>
    </widget>
@@ -145,10 +147,8 @@
    <property name="text">
     <string>Copy</string>
    </property>
-  </action>
-  <action name="actionPaste">
-   <property name="text">
-    <string>Paste</string>
+   <property name="shortcut">
+    <string>Ctrl+C</string>
    </property>
   </action>
   <action name="actionUndo">
@@ -159,6 +159,37 @@
   <action name="actionRedo">
    <property name="text">
     <string>Redo</string>
+   </property>
+  </action>
+  <action name="actionCut">
+   <property name="text">
+    <string>Cut</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+X</string>
+   </property>
+  </action>
+  <action name="actionCopy1">
+   <property name="text">
+    <string>Copy1</string>
+   </property>
+  </action>
+  <action name="actionCopy2">
+   <property name="text">
+    <string>Copy2</string>
+   </property>
+  </action>
+  <action name="actionCopy3">
+   <property name="text">
+    <string>Copy3</string>
+   </property>
+  </action>
+  <action name="actionPaste_2">
+   <property name="text">
+    <string>Paste</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+V</string>
    </property>
   </action>
  </widget>
