--- a/TextEditor/mainwindow.ui
+++ b/TextEditor/mainwindow.ui
@@ -46,6 +46,88 @@
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
+         <item alignment="Qt::AlignLeft">
+          <widget class="QComboBox" name="fontSizeComboBox">
+           <item>
+            <property name="text">
+             <string>8</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>9</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>10</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>11</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>12</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>14</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>16</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>18</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>20</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>22</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>24</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>26</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>28</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>36</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>48</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+         <item alignment="Qt::AlignLeft">
+          <widget class="QFontComboBox" name="fontComboBox"/>
+         </item>
          <item>
           <widget class="QTextEdit" name="textEdit"/>
          </item>
@@ -100,6 +182,24 @@
     <property name="title">
      <string>Format</string>
     </property>
+    <widget class="QMenu" name="menuFont_Type">
+     <property name="title">
+      <string>Font Type</string>
+     </property>
+     <addaction name="actionBold"/>
+     <addaction name="actionItalic"/>
+     <addaction name="actionUnderline"/>
+    </widget>
+    <widget class="QMenu" name="menuFont_Size">
+     <property name="title">
+      <string>Font Size</string>
+     </property>
+    </widget>
+    <addaction name="actionFormat_Text"/>
+    <addaction name="separator"/>
+    <addaction name="menuFont_Type"/>
+    <addaction name="actionFont_Style"/>
+    <addaction name="menuFont_Size"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -121,6 +221,9 @@
   <action name="actionNew">
    <property name="text">
     <string>New</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
    </property>
   </action>
   <action name="actionOpen">
@@ -190,6 +293,31 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+V</string>
+   </property>
+  </action>
+  <action name="actionFormat_Text">
+   <property name="text">
+    <string>Format Text</string>
+   </property>
+  </action>
+  <action name="actionFont_Style">
+   <property name="text">
+    <string>Font Style</string>
+   </property>
+  </action>
+  <action name="actionBold">
+   <property name="text">
+    <string>Bold</string>
+   </property>
+  </action>
+  <action name="actionItalic">
+   <property name="text">
+    <string>Italic</string>
+   </property>
+  </action>
+  <action name="actionUnderline">
+   <property name="text">
+    <string>Underline</string>
    </property>
   </action>
  </widget>
