got paste working with tabs

--- a/TextEditor/mainwindow.ui
+++ b/TextEditor/mainwindow.ui
@@ -273,6 +273,9 @@
    <property name="text">
     <string>Cut</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+X</string>
+   </property>
   </action>
   <action name="actionCopy2">
    <property name="text">
