limited the paste

--- a/TextEditor/mainwindow.ui
+++ b/TextEditor/mainwindow.ui
@@ -258,6 +258,9 @@
    <property name="text">
     <string>Copy</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+C</string>
+   </property>
   </action>
   <action name="actionUndo">
    <property name="text">
@@ -295,6 +298,9 @@
   <action name="actionPaste">
    <property name="text">
     <string>Paste</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+V</string>
    </property>
   </action>
   <action name="actionSplit_Dock_Vertically">
