--- a/TextEditor/mainwindow.ui
+++ b/TextEditor/mainwindow.ui
@@ -46,7 +46,7 @@
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
-         <item alignment="Qt::AlignLeft">
+         <item>
           <widget class="QComboBox" name="fontSizeComboBox">
            <item>
             <property name="text">
@@ -213,12 +213,39 @@
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionNew"/>
+   <addaction name="actionOpen"/>
+   <addaction name="actionSave_as"/>
+   <addaction name="separator"/>
+   <addaction name="actionPaste_2"/>
+   <addaction name="actionCut"/>
+   <addaction name="actionPrint"/>
+   <addaction name="separator"/>
+   <addaction name="actionBold"/>
+   <addaction name="actionItalic"/>
+   <addaction name="actionUnderline"/>
+   <addaction name="separator"/>
+  </widget>
   <action name="actionFormat">
    <property name="text">
     <string>Format</string>
    </property>
   </action>
   <action name="actionNew">
+   <property name="icon">
+    <iconset resource="Resources.qrc">
+     <normaloff>:/imgs/icon/newFileIcon.png</normaloff>:/imgs/icon/newFileIcon.png</iconset>
+   </property>
    <property name="text">
     <string>New</string>
    </property>
@@ -227,16 +254,28 @@
    </property>
   </action>
   <action name="actionOpen">
+   <property name="icon">
+    <iconset resource="Resources.qrc">
+     <normaloff>:/imgs/icon/openFileIcon.png</normaloff>:/imgs/icon/openFileIcon.png</iconset>
+   </property>
    <property name="text">
     <string>Open</string>
    </property>
   </action>
   <action name="actionSave_as">
+   <property name="icon">
+    <iconset resource="Resources.qrc">
+     <normaloff>:/imgs/icon/saveIcon.png</normaloff>:/imgs/icon/saveIcon.png</iconset>
+   </property>
    <property name="text">
     <string>Save as</string>
    </property>
   </action>
   <action name="actionPrint">
+   <property name="icon">
+    <iconset resource="Resources.qrc">
+     <normaloff>:/imgs/icon/printIcon.png</normaloff>:/imgs/icon/printIcon.png</iconset>
+   </property>
    <property name="text">
     <string>Print</string>
    </property>
@@ -265,6 +304,10 @@
    </property>
   </action>
   <action name="actionCut">
+   <property name="icon">
+    <iconset resource="Resources.qrc">
+     <normaloff>:/imgs/icon/cutIcon.png</normaloff>:/imgs/icon/cutIcon.png</iconset>
+   </property>
    <property name="text">
     <string>Cut</string>
    </property>
@@ -288,6 +331,10 @@
    </property>
   </action>
   <action name="actionPaste_2">
+   <property name="icon">
+    <iconset resource="Resources.qrc">
+     <normaloff>:/imgs/icon/pasteIcon.png</normaloff>:/imgs/icon/pasteIcon.png</iconset>
+   </property>
    <property name="text">
     <string>Paste</string>
    </property>
@@ -306,21 +353,35 @@
    </property>
   </action>
   <action name="actionBold">
+   <property name="icon">
+    <iconset resource="Resources.qrc">
+     <normaloff>:/imgs/icon/boldIcon.png</normaloff>:/imgs/icon/boldIcon.png</iconset>
+   </property>
    <property name="text">
     <string>Bold</string>
    </property>
   </action>
   <action name="actionItalic">
+   <property name="icon">
+    <iconset resource="Resources.qrc">
+     <normaloff>:/imgs/icon/italicIcon.png</normaloff>:/imgs/icon/italicIcon.png</iconset>
+   </property>
    <property name="text">
     <string>Italic</string>
    </property>
   </action>
   <action name="actionUnderline">
+   <property name="icon">
+    <iconset resource="Resources.qrc">
+     <normaloff>:/imgs/icon/underlineIcon.png</normaloff>:/imgs/icon/underlineIcon.png</iconset>
+   </property>
    <property name="text">
     <string>Underline</string>
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="Resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
