--- a/TextEditor/mainwindow.ui
+++ b/TextEditor/mainwindow.ui
@@ -321,7 +321,7 @@
    <addaction name="actionOpen"/>
    <addaction name="actionSave_as"/>
    <addaction name="separator"/>
-   <addaction name="actionPaste_2"/>
+   <addaction name="actionPaste_5"/>
    <addaction name="actionCut"/>
    <addaction name="actionPrint"/>
    <addaction name="separator"/>
@@ -424,7 +424,7 @@
     <string>Copy1</string>
    </property>
   </action>
-  <action name="actionPaste_2">
+  <action name="actionPaste_5">
    <property name="icon">
     <iconset resource="resources.qrc">
      <normaloff>:/imgs/icon/pasteIcon.png</normaloff>:/imgs/icon/pasteIcon.png</iconset>
@@ -506,6 +506,15 @@
   <action name="actionZoom_Standard">
    <property name="text">
     <string>Zoom Standard</string>
+   </property>
+  </action>
+  <action name="actionPaste">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/imgs/icon/pasteIcon.png</normaloff>:/imgs/icon/pasteIcon.png</iconset>
+   </property>
+   <property name="text">
+    <string>Paste</string>
    </property>
   </action>
  </widget>
