--- a/TextEditor/mainwindow.ui
+++ b/TextEditor/mainwindow.ui
@@ -153,7 +153,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -209,11 +209,20 @@
       <string>Font Size</string>
      </property>
     </widget>
+    <widget class="QMenu" name="menuAlignment">
+     <property name="title">
+      <string>Alignment</string>
+     </property>
+     <addaction name="actionAlign_Left"/>
+     <addaction name="actionCenter"/>
+     <addaction name="actionAlign_Right"/>
+    </widget>
     <addaction name="actionFormat_Text"/>
     <addaction name="separator"/>
     <addaction name="menuFont_Type"/>
     <addaction name="actionFont_Style"/>
     <addaction name="menuFont_Size"/>
+    <addaction name="menuAlignment"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -244,6 +253,10 @@
    <addaction name="actionPaste_5"/>
    <addaction name="actionCut"/>
    <addaction name="actionPrint"/>
+   <addaction name="separator"/>
+   <addaction name="actionAlign_Left"/>
+   <addaction name="actionCenter"/>
+   <addaction name="actionAlign_Right"/>
    <addaction name="separator"/>
    <addaction name="actionBold"/>
    <addaction name="actionItalic"/>
@@ -449,6 +462,33 @@
   <action name="actionOptions">
    <property name="text">
     <string>Settings</string>
+   </property>
+  </action>
+  <action name="actionAlign_Left">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/imgs/icon/alignLeftIcon.png</normaloff>:/imgs/icon/alignLeftIcon.png</iconset>
+   </property>
+   <property name="text">
+    <string>Align Left</string>
+   </property>
+  </action>
+  <action name="actionCenter">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/imgs/icon/alignCenterIcon.png</normaloff>:/imgs/icon/alignCenterIcon.png</iconset>
+   </property>
+   <property name="text">
+    <string>Center</string>
+   </property>
+  </action>
+  <action name="actionAlign_Right">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/imgs/icon/alignRightIcon.png</normaloff>:/imgs/icon/alignRightIcon.png</iconset>
+   </property>
+   <property name="text">
+    <string>Align Right</string>
    </property>
   </action>
  </widget>
