TextTab small update/ resource cleanup

--- a/TextEditor/mainwindow.ui
+++ b/TextEditor/mainwindow.ui
@@ -133,7 +133,11 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
-          <widget class="QTextEdit" name="textEdit"/>
+          <widget class="QTextEdit" name="textEdit">
+           <property name="cursor" stdset="0">
+            <cursorShape>ArrowCursor</cursorShape>
+           </property>
+          </widget>
          </item>
         </layout>
        </widget>
@@ -153,7 +157,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
