--- a/TextEditor/optionswindow.ui
+++ b/TextEditor/optionswindow.ui
@@ -23,7 +23,7 @@
       <enum>Qt::ScrollBarAsNeeded</enum>
      </property>
      <attribute name="headerVisible">
-      <bool>true</bool>
+      <bool>false</bool>
      </attribute>
      <column>
       <property name="text">
@@ -36,7 +36,7 @@
       </property>
       <item>
        <property name="text">
-        <string>Font Style</string>
+        <string>Font Family</string>
        </property>
       </item>
       <item>
